Fixed the member page content shifting to right problem

--- a/public/sass/components/_dealPageContent.scss
+++ b/public/sass/components/_dealPageContent.scss
@@ -188,7 +188,6 @@
   // }
 }
 
-
 .deal_area_box {
   display: flex;
   background-color: white;
@@ -415,15 +414,20 @@
 
 .cover {
   padding-top: 9rem !important;
-  margin-left: 15%;
-  width: 85%;
+  // margin-left: 15%;
+  width: 100%;
   height: 20vh;
   background-color: orangered;
 }
+
+.member-page-content {
+  background-color: white;
+}
+
 .profile_area {
-  margin-left: 15%;
-  width: 85%;
-  height: 10vh;
+  // margin-left: 15%;
+  width: 100%;
+  height: 10.5vh;
   background-color: yellowgreen;
   display: block;
   &_pic {
